1. Change "Cloud" to "Google Drive". 2. Do backupDatabase first (zip db file) before do Google drive backup. 3. New Dropbox backup feature added. Dropbox restore unfinished.